opam-version: "2.0"
maintainer: "Rizo I. <rizo@odis.io>"
authors: "Rizo I. <rizo@odis.io>"
homepage: "https://github.com/fold-lang/fold"
bug-reports: "https://github.com/fold-lang/fold/issues"
synopsis: "Fold is an alternative syntax for OCaml"

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml" {= "4.14.0"}
  "dune" {build}
  "menhirLib" {build}
  "ocaml-migrate-parsetree"
  "fmt"
  "odoc" {with-doc}
  "ocaml-lsp-server" {with-dev-setup}
  "ocamlformat" {with-dev-setup}
]

