;; Run cases

(executable
 (name run)
 (modules Run)
 (libraries fmt shaper fold compiler-libs.common shaper_calc))

(rule
 (with-stdout-to
  actual-ml.txt
  (run ./run.exe)))

(rule
 (alias runtest)
 (action
  (diff expected-ml.txt actual-ml.txt)))

;; Lispy.fl

(rule
 (deps Lispy.fl)
 (action
  (with-stdout-to
   Lispy.fl.ml.actual
   (run fold-fmt -i fl -o ml %{deps}))))

(rule
 (alias runtest)
 (action
  (diff Lispy.fl.ml.expected Lispy.fl.ml.actual)))

(rule
 (deps Lispy.fl)
 (action
  (with-stdout-to
   Lispy.fl.sexp.actual
   (run fold-fmt -i fl -o sexp %{deps}))))

(rule
 (alias runtest)
 (action
  (diff Lispy.fl.sexp.expected Lispy.fl.sexp.actual)))

;; Shapes.fl

(rule
 (deps Shapes.fl)
 (action
  (with-stdout-to
   Shapes.fl.sexp.actual
   (run fold-fmt -i fl -o sexp %{deps}))))

(rule
 (alias runtest)
 (action
  (diff Shapes.fl.sexp.expected Shapes.fl.sexp.actual)))

;; Quote.fl

(rule
 (deps Quote.fl)
 (action
  (with-stdout-to
   Quote.fl.ml.actual
   (run fold-fmt -i fl -o ml %{deps}))))

(rule
 (alias runtest)
 (action
  (diff Quote.fl.ml.expected Quote.fl.ml.actual)))

;; Bugs.fl

(rule
 (deps Bugs.fl)
 (action
  (with-stdout-to
   Bugs.fl.ml.actual
   (run fold-fmt -i fl -o ml %{deps}))))

(rule
 (alias runtest)
 (action
  (diff Bugs.fl.ml.expected Bugs.fl.ml.actual)))
