
;; Lispy.fl

(rule
 (deps Lispy.fl)
 (action
  (with-stdout-to
   Lispy.fl.ml.actual
   (pipe-stdout
    (run fl -i fl -o ml %{deps})
    (run %{bin:ocamlformat} --impl -)))))

(rule
 (alias runtest)
 (action
  (diff Lispy.fl.ml.expected Lispy.fl.ml.actual)))

(rule
 (deps Lispy.fl)
 (action
  (with-stdout-to
   Lispy.fl.sexp.actual
   (run fl -i fl -o sexp %{deps}))))

(rule
 (alias runtest)
 (action
  (diff Lispy.fl.sexp.expected Lispy.fl.sexp.actual)))

;; Shapes.fl

(rule
 (deps Shapes.fl)
 (action
  (with-stdout-to
   Shapes.fl.sexp.actual
   (run fl -i fl -o sexp %{deps}))))

(rule
 (alias runtest)
 (action
  (diff Shapes.fl.sexp.expected Shapes.fl.sexp.actual)))

(rule
 (deps Shapes.fl)
 (action
  (with-stdout-to
   Shapes.fl.fmt
   (run fl -i fl -o fl %{deps}))))

(rule
 (alias runtest)
 (action
  (diff Shapes.fl Shapes.fl.fmt)))


;; Quote.fl

(rule
 (deps Quote.fl)
 (action
  (with-stdout-to
   Quote.fl.ml.actual
   (run fl -i fl -o ml %{deps}))))

(rule
 (alias runtest)
 (action
  (diff Quote.fl.ml.expected Quote.fl.ml.actual)))

(cram
 (deps %{bin:fl}))
